Add protocol-level filtering and storage benchmarks
Introduces protocol-level domain filtering and file message storage features, with corresponding benchmarks and example usage. Updates SmtpServerBuilder to simplify filter setup, enables SMTPUTF8 by default, and adds comprehensive tests for mailbox filters and message stores. Improves documentation to distinguish event-based and protocol-level filtering.

--- a/src/Zetian/Zetian.csproj
+++ b/src/Zetian/Zetian.csproj
@@ -47,6 +47,7 @@
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <Configurations>Debug;Release</Configurations>
         <NoWarn>$(NoWarn);1591</NoWarn>
+        <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
     </PropertyGroup>
 
     <ItemGroup>
