Refactor imports and test mocks for consistency
Updated using directives in benchmarks and examples to use direct namespace imports. Adjusted test mocks in MessageStoreTests to use simplified type references and added missing async and stream methods for message data handling. Added InternalsVisibleTo for Zetian.Benchmarks in the project file to enable internal access for benchmarks.

--- a/src/Zetian/Zetian.csproj
+++ b/src/Zetian/Zetian.csproj
@@ -82,6 +82,7 @@
 
     <ItemGroup>
         <InternalsVisibleTo Include="Zetian.Tests" />
+        <InternalsVisibleTo Include="Zetian.Benchmarks" />
     </ItemGroup>
 
 </Project>
