Add Zetian documentation site and update templates
Introduces a new Next.js-based documentation site for Zetian SMTP Server under the .pages directory, including Docker deployment files, configuration, and various documentation pages. Updates GitHub issue templates to reference the new documentation site and improve options for documentation-related issues.

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,8 +3,8 @@ contact_links:
   - name: 💬 Zetian Discussions
     url: https://github.com/Taiizor/Zetian/discussions
     about: Ask questions, share ideas, and discuss Zetian features
-  - name: 📚 Documentation Wiki
-    url: https://github.com/Taiizor/Zetian/wiki
+  - name: 📚 Zetian Documentation
+    url: https://zetian.soferity.com
     about: Comprehensive guides, API reference, and tutorials
   - name: 🔒 Security Issues
     url: mailto:taiizor@vegalya.com
