--- a/.github/ISSUE_TEMPLATE/documentation_improvement.yaml
+++ b/.github/ISSUE_TEMPLATE/documentation_improvement.yaml
@@ -8,6 +8,8 @@ body:
     attributes:
       value: |
         Thanks for helping us improve our documentation! Please fill out the sections below.
+        
+        📚 **Documentation Site**: https://zetian.soferity.com
   
   - type: dropdown
     id: doc-type
@@ -23,8 +25,9 @@ body:
         - Security Best Practices
         - Migration Guide
         - Code Examples
+        - Website/Documentation Site
+        - Changelog
         - README
-        - Wiki Pages
         - Other
     validations:
       required: true
@@ -34,7 +37,13 @@ body:
     attributes:
       label: Current Documentation Location
       description: Where is the current documentation located? (URL, file path, or section name)
-      placeholder: "https://github.com/Taiizor/Zetian/wiki/..."
+      placeholder: |
+        Examples:
+        - https://zetian.soferity.com/docs
+        - https://zetian.soferity.com/examples
+        - https://zetian.soferity.com/changelog
+        - README.md section
+        - /.pages/app/docs/...
     validations:
       required: false
   
@@ -47,6 +56,7 @@ body:
         The documentation for X is unclear because...
         There's no example showing how to...
         The section about Y is outdated...
+        The website navigation could be improved...
     validations:
       required: true
   
@@ -59,6 +69,8 @@ body:
         Add a section explaining...
         Include code examples for...
         Clarify the description of...
+        Add interactive examples to the website...
+        Improve search functionality...
     validations:
       required: true
   
@@ -96,6 +108,9 @@ body:
         - label: Error Handling
         - label: Performance & Scaling
         - label: Testing & Debugging
+        - label: Website UI/UX
+        - label: API Documentation
+        - label: Code Examples
   
   - type: dropdown
     id: user-level
@@ -134,7 +149,7 @@ body:
     id: terms
     attributes:
       label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/Taiizor/Zetian/blob/main/CODE_OF_CONDUCT.md)
+      description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/Taiizor/Zetian/blob/develop/CODE_OF_CONDUCT.md)
       options:
         - label: I agree to follow this project's Code of Conduct
           required: true
