--- a/.pages/package.json
+++ b/.pages/package.json
@@ -20,7 +20,7 @@
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-syntax-highlighter": "^15.6.6",
+    "prismjs": "^1.30.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
@@ -29,7 +29,7 @@
     "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/prismjs": "^1.26.5",
     "autoprefixer": "^10.4.21",
     "tailwindcss": "^4.1.15",
     "typescript": "^5"
