Add SMTP health check extension and examples
Introduces Zetian.HealthCheck with health check service, interfaces, and SMTP server health monitoring. Adds extension methods for enabling health checks, example usage, and related tests. Updates solution and project files to include new health check projects and features.

--- a/examples/Zetian.HealthCheck.Examples/Zetian.HealthCheck.Examples.csproj
+++ b/examples/Zetian.HealthCheck.Examples/Zetian.HealthCheck.Examples.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <Nullable>enable</Nullable>
@@ -7,11 +7,12 @@
         <AnalysisLevel>preview</AnalysisLevel>
         <ImplicitUsings>enable</ImplicitUsings>
         <TargetFramework>net10.0</TargetFramework>
-        <RootNamespace>Zetian.TestExamples</RootNamespace>
+        <RootNamespace>Zetian.HealthCheck.Examples</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\Zetian\Zetian.csproj" />
+        <ProjectReference Include="..\..\src\Zetian.HealthCheck\Zetian.HealthCheck.csproj" />
     </ItemGroup>
 
     <ItemGroup>
