Update health check tests for custom path handling
Refactored and clarified health check tests to ensure correct behavior when using custom prefixes and paths. Added SimplifiedCustomPathTests for easier verification of custom path scenarios. Updated test URLs and method names for consistency and accuracy with the health check endpoint routing logic. Also added 'zetian' to package tags in Zetian.csproj.

--- a/src/Zetian/Zetian.csproj
+++ b/src/Zetian/Zetian.csproj
@@ -26,7 +26,7 @@
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
-        <PackageTags>smtp;email;mail;server;smtp-server;mail-server;email-server;tcp;network;protocol</PackageTags>
+        <PackageTags>smtp;email;mail;server;smtp-server;mail-server;email-server;tcp;network;protocol;zetian</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
