--- a/.pages/public/manifest.json
+++ b/.pages/public/manifest.json
@@ -4,10 +4,22 @@
   "description": "Professional SMTP Server for .NET - Documentation and API Reference",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#0ea5e9",
+  "background_color": "#101828",
+  "theme_color": "#030713",
   "orientation": "portrait-primary",
   "icons": [
+    {
+      "src": "/icon-16.png",
+      "sizes": "16x16",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-24.png",
+      "sizes": "24x24",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
     {
       "src": "/icon-32.png",
       "sizes": "32x32",
