--- a/tests/Zetian.HealthCheck.Tests/Zetian.HealthCheck.Tests.csproj
+++ b/tests/Zetian.HealthCheck.Tests/Zetian.HealthCheck.Tests.csproj
@@ -28,6 +28,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.0-rtm.25513.102" />
     </ItemGroup>
 
 </Project>
