Add AmazonS3 and AzureBlob storage providers
Integrated Zetian.Storage.AmazonS3 and Zetian.Storage.AzureBlob projects into the solution. Updated their .csproj files for AOT support, packaging, and metadata. Minor code cleanups and added missing using directives. Standardized release notes across all storage provider projects.

--- a/src/Zetian.Storage/Zetian.Storage.csproj
+++ b/src/Zetian.Storage/Zetian.Storage.csproj
@@ -40,7 +40,7 @@
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-        <PackageReleaseNotes>Initial release with support for multiple storage providers.</PackageReleaseNotes>
+        <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
         <PackageTags>zetian;smtp;email;storage;database;abstraction</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
