--- a/src/Zetian.Storage.Providers/Zetian.Storage.Providers.csproj
+++ b/src/Zetian.Storage.Providers/Zetian.Storage.Providers.csproj
@@ -40,7 +40,7 @@
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-        <PackageReleaseNotes>Initial release with support for multiple storage providers.</PackageReleaseNotes>
+        <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
         <PackageTags>zetian;smtp;email;storage;database;sql;postgresql;mongodb;redis;azure;aws;s3</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
