--- a/src/Zetian.Storage.PostgreSQL/Zetian.Storage.PostgreSQL.csproj
+++ b/src/Zetian.Storage.PostgreSQL/Zetian.Storage.PostgreSQL.csproj
@@ -17,7 +17,7 @@
         <Title>Zetian.Storage.PostgreSQL</Title>
         <PackageId>Zetian.Storage.PostgreSQL</PackageId>
         <Authors>Taiizor</Authors>
-        <Product>Zetian SMTP Storage Providers</Product>
+        <Product>Zetian SMTP Server - Storage PostgreSQL</Product>
         <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
         <Summary>Store SMTP messages in PostgreSQL database</Summary>
         <Description>PostgreSQL storage provider for Zetian SMTP Server</Description>
@@ -51,7 +51,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Zetian\Zetian.csproj" />
         <ProjectReference Include="..\Zetian.Storage\Zetian.Storage.csproj" />
     </ItemGroup>
 
