--- a/src/Zetian.HealthCheck/Zetian.HealthCheck.csproj
+++ b/src/Zetian.HealthCheck/Zetian.HealthCheck.csproj
@@ -29,7 +29,7 @@
         <Title>Zetian.HealthCheck</Title>
         <PackageId>Zetian.HealthCheck</PackageId>
         <Authors>Taiizor</Authors>
-        <Product>Zetian HealthCheck</Product>
+        <Product>Zetian SMTP Server - Health Check</Product>
         <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
         <Summary>Health check monitoring extension for Zetian SMTP Server. Provides HTTP endpoints for liveness, readiness, and detailed health status monitoring.</Summary>
         <Description>Health check monitoring extension for Zetian SMTP Server. Provides HTTP endpoints for liveness, readiness, and detailed health status monitoring with customizable checks, metrics, and Kubernetes integration support. Perfect for production monitoring and orchestration systems.</Description>
