--- a/src/Zetian.Storage.AzureBlob/Zetian.Storage.AzureBlob.csproj
+++ b/src/Zetian.Storage.AzureBlob/Zetian.Storage.AzureBlob.csproj
@@ -32,7 +32,7 @@
         <Title>Zetian.Storage.AzureBlob</Title>
         <PackageId>Zetian.Storage.AzureBlob</PackageId>
         <Authors>Taiizor</Authors>
-        <Product>Zetian SMTP Storage Providers</Product>
+        <Product>Zetian SMTP Server - Storage Azure Blob</Product>
         <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
         <Summary>Store SMTP messages in Azure Blob Storage</Summary>
         <Description>Azure Blob Storage provider for Zetian SMTP Server</Description>
@@ -66,7 +66,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Zetian\Zetian.csproj" />
         <ProjectReference Include="..\Zetian.Storage\Zetian.Storage.csproj" />
     </ItemGroup>
 
