--- a/src/Zetian.Storage.MongoDB/Zetian.Storage.MongoDB.csproj
+++ b/src/Zetian.Storage.MongoDB/Zetian.Storage.MongoDB.csproj
@@ -32,7 +32,7 @@
         <Title>Zetian.Storage.MongoDB</Title>
         <PackageId>Zetian.Storage.MongoDB</PackageId>
         <Authors>Taiizor</Authors>
-        <Product>Zetian SMTP Storage Providers</Product>
+        <Product>Zetian SMTP Server - Storage MongoDB</Product>
         <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
         <Summary>Store SMTP messages in MongoDB database</Summary>
         <Description>MongoDB NoSQL storage provider for Zetian SMTP Server</Description>
@@ -66,7 +66,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Zetian\Zetian.csproj" />
         <ProjectReference Include="..\Zetian.Storage\Zetian.Storage.csproj" />
     </ItemGroup>
 
