--- a/src/Zetian.Storage.SqlServer/Zetian.Storage.SqlServer.csproj
+++ b/src/Zetian.Storage.SqlServer/Zetian.Storage.SqlServer.csproj
@@ -32,7 +32,7 @@
         <Title>Zetian.Storage.SqlServer</Title>
         <PackageId>Zetian.Storage.SqlServer</PackageId>
         <Authors>Taiizor</Authors>
-        <Product>Zetian SMTP Storage Providers</Product>
+        <Product>Zetian SMTP Server - Storage SqlServer</Product>
         <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
         <Summary>Store SMTP messages in SQL Server database</Summary>
         <Description>SQL Server storage provider for Zetian SMTP Server</Description>
@@ -66,7 +66,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Zetian\Zetian.csproj" />
         <ProjectReference Include="..\Zetian.Storage\Zetian.Storage.csproj" />
     </ItemGroup>
 
