Move storage projects to Storage subfolder
All Zetian.Storage.* projects and related files have been relocated from src/ to src/Storage/. Solution and project references were updated to reflect the new paths. This improves organization and maintainability of the codebase.

--- a/src/Storage/Zetian.Storage.AmazonS3/Zetian.Storage.AmazonS3.csproj
+++ b/src/Storage/Zetian.Storage.AmazonS3/Zetian.Storage.AmazonS3.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFrameworks>net6.0;net7.0;net8.0;net9.0;net10.0</TargetFrameworks>
-        <RootNamespace>Zetian.Storage</RootNamespace>
+        <RootNamespace>Zetian.Storage.AmazonS3</RootNamespace>
         <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
         <ImplicitUsings>disable</ImplicitUsings>
         <DefaultLanguage>en-GB</DefaultLanguage>
@@ -29,19 +29,19 @@
         <Version>1.0.0</Version>
         <AssemblyVersion>$(Version)</AssemblyVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Title>Zetian.Storage</Title>
-        <PackageId>Zetian.Storage</PackageId>
+        <Title>Zetian.Storage.AmazonS3</Title>
+        <PackageId>Zetian.Storage.AmazonS3</PackageId>
         <Authors>Taiizor</Authors>
-        <Product>Zetian SMTP Server - Storage</Product>
+        <Product>Zetian SMTP Server - Storage Amazon S3</Product>
         <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
-        <Summary>Storage abstraction layer for Zetian SMTP Server</Summary>
-        <Description>Core storage abstractions and base classes for Zetian SMTP Server</Description>
+        <Summary>Store SMTP messages in Amazon S3 or S3-compatible storage</Summary>
+        <Description>Amazon S3 and S3-compatible storage provider for Zetian SMTP Server</Description>
         <PackageReadmeFile>README.MD</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
-        <PackageTags>zetian;smtp;email;storage;database;abstraction</PackageTags>
+        <PackageTags>zetian;smtp;email;storage;aws;s3;cloud;minio;wasabi</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
@@ -66,7 +66,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Zetian\Zetian.csproj" />
+        <ProjectReference Include="..\Zetian.Storage\Zetian.Storage.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -77,11 +77,15 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="AWSSDK.S3" Version="4.0.7.14" />
+    </ItemGroup>
+
+    <ItemGroup>
         <None Include="README.MD">
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
-        <None Include="..\..\LICENSE">
+        <None Include="..\..\..\LICENSE">
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
