--- a/src/Zetian.Storage.Providers/Zetian.Storage.Providers.csproj
+++ b/src/Zetian.Storage.Providers/Zetian.Storage.Providers.csproj
@@ -66,7 +66,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Zetian.Storage\Zetian.Storage.csproj" />
+        <ProjectReference Include="..\Zetian\Zetian.csproj" />
     </ItemGroup>
 
     <ItemGroup>
