--- a/src/Storage/Zetian.Storage.MongoDB/Zetian.Storage.MongoDB.csproj
+++ b/src/Storage/Zetian.Storage.MongoDB/Zetian.Storage.MongoDB.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFrameworks>net6.0;net7.0;net8.0;net9.0;net10.0</TargetFrameworks>
-        <RootNamespace>Zetian.Storage.SqlServer</RootNamespace>
+        <RootNamespace>Zetian.Storage.MongoDB</RootNamespace>
         <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
         <ImplicitUsings>disable</ImplicitUsings>
         <DefaultLanguage>en-GB</DefaultLanguage>
@@ -29,19 +29,19 @@
         <Version>1.0.0</Version>
         <AssemblyVersion>$(Version)</AssemblyVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Title>Zetian.Storage.SqlServer</Title>
-        <PackageId>Zetian.Storage.SqlServer</PackageId>
+        <Title>Zetian.Storage.MongoDB</Title>
+        <PackageId>Zetian.Storage.MongoDB</PackageId>
         <Authors>Taiizor</Authors>
-        <Product>Zetian SMTP Server - Storage SqlServer</Product>
+        <Product>Zetian SMTP Server - Storage MongoDB</Product>
         <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
-        <Summary>Store SMTP messages in SQL Server database</Summary>
-        <Description>SQL Server storage provider for Zetian SMTP Server</Description>
+        <Summary>Store SMTP messages in MongoDB database</Summary>
+        <Description>MongoDB NoSQL storage provider for Zetian SMTP Server</Description>
         <PackageReadmeFile>README.MD</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
-        <PackageTags>zetian;smtp;email;storage;database;sqlserver;mssql</PackageTags>
+        <PackageTags>zetian;smtp;email;storage;database;mongodb;nosql</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
@@ -77,7 +77,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.2" />
+        <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -85,7 +85,7 @@
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
-        <None Include="..\..\LICENSE">
+        <None Include="..\..\..\LICENSE">
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
