--- a/src/Storage/Zetian.Storage.PostgreSQL/Zetian.Storage.PostgreSQL.csproj
+++ b/src/Storage/Zetian.Storage.PostgreSQL/Zetian.Storage.PostgreSQL.csproj
@@ -1,27 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFrameworks>net6.0;net7.0;net8.0;net9.0;net10.0</TargetFrameworks>
-        <RootNamespace>Zetian.Storage.AmazonS3</RootNamespace>
+        <RootNamespace>Zetian.Storage.PostgreSQL</RootNamespace>
         <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
         <ImplicitUsings>disable</ImplicitUsings>
         <DefaultLanguage>en-GB</DefaultLanguage>
         <Nullable>enable</Nullable>
-    </PropertyGroup>
-
-    <!-- AOT Support for .NET 7.0+ -->
-    <PropertyGroup Condition="'$(TargetFramework)' == 'net7.0' OR '$(TargetFramework)' == 'net8.0' OR '$(TargetFramework)' == 'net9.0' OR '$(TargetFramework)' == 'net10.0'">
-        <EnableAotAnalyzer Condition="'$(TargetFramework)' == 'net8.0' OR '$(TargetFramework)' == 'net9.0' OR '$(TargetFramework)' == 'net10.0'">true</EnableAotAnalyzer>
-        <JsonSerializerIsReflectionEnabledByDefault>false</JsonSerializerIsReflectionEnabledByDefault>
-        <IlcGenerateCompleteTypeMetadata>false</IlcGenerateCompleteTypeMetadata>
-        <PublishAot Condition="'$(RuntimeIdentifier)' != ''">true</PublishAot>
-        <SuppressTrimAnalysisWarnings>false</SuppressTrimAnalysisWarnings>
-        <EnableSingleFileAnalyzer>true</EnableSingleFileAnalyzer>
-        <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
-        <IsAotCompatible>true</IsAotCompatible>
-        <IlcTrimMetadata>true</IlcTrimMetadata>
-        <IsTrimmable>true</IsTrimmable>
-        <TrimMode>link</TrimMode>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -29,19 +14,19 @@
         <Version>1.0.0</Version>
         <AssemblyVersion>$(Version)</AssemblyVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Title>Zetian.Storage.AmazonS3</Title>
-        <PackageId>Zetian.Storage.AmazonS3</PackageId>
+        <Title>Zetian.Storage.PostgreSQL</Title>
+        <PackageId>Zetian.Storage.PostgreSQL</PackageId>
         <Authors>Taiizor</Authors>
-        <Product>Zetian SMTP Server - Storage Amazon S3</Product>
+        <Product>Zetian SMTP Server - Storage PostgreSQL</Product>
         <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
-        <Summary>Store SMTP messages in Amazon S3 or S3-compatible storage</Summary>
-        <Description>Amazon S3 and S3-compatible storage provider for Zetian SMTP Server</Description>
+        <Summary>Store SMTP messages in PostgreSQL database</Summary>
+        <Description>PostgreSQL storage provider for Zetian SMTP Server</Description>
         <PackageReadmeFile>README.MD</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
-        <PackageTags>zetian;smtp;email;storage;aws;s3;cloud;minio;wasabi</PackageTags>
+        <PackageTags>zetian;smtp;email;storage;database;postgresql;postgres</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
@@ -77,7 +62,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="AWSSDK.S3" Version="4.0.7.14" />
+        <PackageReference Include="Npgsql" Version="9.0.4" />
+    </ItemGroup>
+
+    <!-- Preserve types for JSON serialization -->
+    <ItemGroup>
+        <TrimmerRootDescriptor Include="TrimmerRoots.xml" Condition="Exists('TrimmerRoots.xml')" />
     </ItemGroup>
 
     <ItemGroup>
@@ -85,7 +75,7 @@
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
-        <None Include="..\..\LICENSE">
+        <None Include="..\..\..\LICENSE">
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
