--- a/src/Storage/Zetian.Storage.AzureBlob/Zetian.Storage.AzureBlob.csproj
+++ b/src/Storage/Zetian.Storage.AzureBlob/Zetian.Storage.AzureBlob.csproj
@@ -33,15 +33,15 @@
         <PackageId>Zetian.Storage.AzureBlob</PackageId>
         <Authors>Taiizor</Authors>
         <Product>Zetian SMTP Server - Storage Azure Blob</Product>
-        <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
-        <Summary>Store SMTP messages in Azure Blob Storage</Summary>
-        <Description>Azure Blob Storage provider for Zetian SMTP Server</Description>
+        <Copyright>Copyright $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
+        <Summary>Azure Blob Storage provider for Zetian SMTP Server. Enables cloud-native message storage with hierarchical organization, access tiers, and Azure AD integration.</Summary>
+        <Description>Azure Blob Storage provider for Zetian SMTP Server. Provides scalable, cloud-native message persistence to Microsoft Azure with enterprise features including hierarchical blob organization, automatic access tier management (Hot/Cool/Archive), Azure AD authentication, soft delete protection, blob tagging for advanced searching, server-side encryption, and built-in compression. Perfect for cloud-first applications requiring unlimited storage capacity, geo-redundancy, and seamless Azure ecosystem integration.</Description>
         <PackageReadmeFile>README.MD</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
-        <PackageTags>zetian;smtp;email;storage;azure;blob;cloud</PackageTags>
+        <PackageTags>azure;blob-storage;cloud;storage;access-tiers;azure-ad;soft-delete;geo-redundancy;scalable;unlimited;tagging;encryption;compression;smtp;email;server;zetian</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
