--- a/src/Storage/Zetian.Storage.MongoDB/Zetian.Storage.MongoDB.csproj
+++ b/src/Storage/Zetian.Storage.MongoDB/Zetian.Storage.MongoDB.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFrameworks>net6.0;net7.0;net8.0;net9.0;net10.0</TargetFrameworks>
@@ -33,15 +33,15 @@
         <PackageId>Zetian.Storage.MongoDB</PackageId>
         <Authors>Taiizor</Authors>
         <Product>Zetian SMTP Server - Storage MongoDB</Product>
-        <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
-        <Summary>Store SMTP messages in MongoDB database</Summary>
-        <Description>MongoDB NoSQL storage provider for Zetian SMTP Server</Description>
+        <Copyright>Copyright $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
+        <Summary>MongoDB NoSQL storage provider for Zetian SMTP Server. Enables flexible document-based message storage with GridFS support for large attachments and automatic TTL.</Summary>
+        <Description>MongoDB NoSQL storage provider for Zetian SMTP Server. Provides flexible, schema-less message persistence with advanced features including GridFS for large attachment storage, automatic TTL-based message expiration, horizontal sharding for scalability, text indexing for full-text search, and built-in compression. Perfect for modern applications requiring flexible data models, automatic scaling, and document-oriented storage without rigid schemas.</Description>
         <PackageReadmeFile>README.MD</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
-        <PackageTags>zetian;smtp;email;storage;database;mongodb;nosql</PackageTags>
+        <PackageTags>mongodb;nosql;document-database;gridfs;ttl;sharding;schema-less;flexible;storage;persistence;message-store;attachments;compression;smtp;email;server;zetian</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
