--- a/src/Storage/Zetian.Storage.PostgreSQL/Zetian.Storage.PostgreSQL.csproj
+++ b/src/Storage/Zetian.Storage.PostgreSQL/Zetian.Storage.PostgreSQL.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFrameworks>net6.0;net7.0;net8.0;net9.0;net10.0</TargetFrameworks>
@@ -18,15 +18,15 @@
         <PackageId>Zetian.Storage.PostgreSQL</PackageId>
         <Authors>Taiizor</Authors>
         <Product>Zetian SMTP Server - Storage PostgreSQL</Product>
-        <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
-        <Summary>Store SMTP messages in PostgreSQL database</Summary>
-        <Description>PostgreSQL storage provider for Zetian SMTP Server</Description>
+        <Copyright>Copyright $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
+        <Summary>PostgreSQL storage provider for Zetian SMTP Server. Enables advanced message storage with JSONB support, table partitioning, and GIN indexing capabilities.</Summary>
+        <Description>PostgreSQL storage provider for Zetian SMTP Server. Provides enterprise-grade message persistence to PostgreSQL databases with advanced features including JSONB header storage, automatic table partitioning, GIN indexing for full-text search, message compression, and built-in retry logic. Ideal for high-volume environments requiring scalable, open-source database storage with powerful querying capabilities.</Description>
         <PackageReadmeFile>README.MD</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
-        <PackageTags>zetian;smtp;email;storage;database;postgresql;postgres</PackageTags>
+        <PackageTags>postgresql;postgres;database;storage;jsonb;partitioning;gin-index;full-text-search;open-source;persistence;message-store;compression;smtp;email;server;zetian</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
