--- a/src/Storage/Zetian.Storage.Redis/Zetian.Storage.Redis.csproj
+++ b/src/Storage/Zetian.Storage.Redis/Zetian.Storage.Redis.csproj
@@ -33,15 +33,15 @@
         <PackageId>Zetian.Storage.Redis</PackageId>
         <Authors>Taiizor</Authors>
         <Product>Zetian SMTP Server - Storage Redis</Product>
-        <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
-        <Summary>High-performance Redis storage for SMTP messages</Summary>
-        <Description>Redis cache and storage provider for Zetian SMTP Server</Description>
+        <Copyright>Copyright $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
+        <Summary>Redis cache and storage provider for Zetian SMTP Server. Enables high-performance in-memory message caching with chunking support and Redis Streams integration.</Summary>
+        <Description>Redis cache and storage provider for Zetian SMTP Server. Delivers ultra-fast, in-memory message caching and temporary storage with advanced features including automatic chunking for large messages, Redis Streams for event-driven architectures, Pub/Sub notifications for real-time updates, sorted set indexing, TTL-based expiration, and built-in compression. Ideal for high-throughput environments requiring lightning-fast message access and real-time event processing.</Description>
         <PackageReadmeFile>README.MD</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
-        <PackageTags>zetian;smtp;email;storage;cache;redis</PackageTags>
+        <PackageTags>redis;cache;in-memory;high-performance;chunking;streams;pub-sub;ttl;real-time;storage;persistence;message-store;compression;smtp;email;server;zetian;event-driven;event-processing</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
