--- a/src/Storage/Zetian.Storage.SqlServer/Zetian.Storage.SqlServer.csproj
+++ b/src/Storage/Zetian.Storage.SqlServer/Zetian.Storage.SqlServer.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFrameworks>net6.0;net7.0;net8.0;net9.0;net10.0</TargetFrameworks>
@@ -33,15 +33,15 @@
         <PackageId>Zetian.Storage.SqlServer</PackageId>
         <Authors>Taiizor</Authors>
         <Product>Zetian SMTP Server - Storage SqlServer</Product>
-        <Copyright>Copyright © $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
-        <Summary>Store SMTP messages in SQL Server database</Summary>
-        <Description>SQL Server storage provider for Zetian SMTP Server</Description>
+        <Copyright>Copyright $([System.DateTime]::Today.ToString(yyyy)) $(Authors)</Copyright>
+        <Summary>SQL Server storage provider for Zetian SMTP Server. Enables persistent message storage in Microsoft SQL Server databases with compression and attachment support.</Summary>
+        <Description>SQL Server storage provider for Zetian SMTP Server. Provides high-performance message persistence to Microsoft SQL Server databases with features including automatic table creation, message compression, separate attachment storage, retry logic, and full ACID compliance. Perfect for enterprise environments requiring reliable message storage with SQL Server infrastructure.</Description>
         <PackageReadmeFile>README.MD</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageLicenseExpression></PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
         <PackageReleaseNotes>All changes are detailed at https://zetian.soferity.com/changelog.</PackageReleaseNotes>
-        <PackageTags>zetian;smtp;email;storage;database;sqlserver;mssql</PackageTags>
+        <PackageTags>sql-server;mssql;database;storage;persistence;message-store;compression;attachment;acid;transaction;enterprise;smtp;email;server;zetian</PackageTags>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <!--<DocumentationFile>..\$(Title)\bin$(OutputPath)\$(Configuration)\$(TargetFramework)\$(Title).xml</DocumentationFile>-->
         <PackageProjectUrl>https://zetian.soferity.com</PackageProjectUrl>
